# Quant-Backtesting-Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: IWM.csv  QQQ.csv  SPY.csv
src/quantbt/: __init__.py  config.py  types.py  utils.py
src/quantbt/analysis/: __init__.py  regimes.py  reporting.py  robustness.py
src/quantbt/backtester/: __init__.py  engine.py  sweep.py  walk_forward.py
src/quantbt/data/: __init__.py  loader.py  synthetic.py
src/quantbt/execution/: __init__.py  simulator.py
src/quantbt/metrics/: __init__.py  performance.py
src/quantbt/portfolio/: __init__.py  state.py
src/quantbt/strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  moving_average.py
tests/: conftest.py  test_allocation_and_regimes.py  test_engine.py  test_execution.py  test_metrics.py  test_portfolio.py  test_research_features.py  test_strategies.py
